--- a/projectmagaz/products/templates/products/main.html
+++ b/projectmagaz/products/templates/products/main.html
@@ -45,7 +45,11 @@
           <a href="/kategori" class="adminmain">Адмін.панель</a>
         
         {% endif %}
+        {% if request.user.is_authenticated %}
+          
+        
         <a href="/orderspage" class="orderspagemain">Мої замовлення</a>
+        {% endif %}
 
     </header>
     {% endblock menu %}
@@ -68,7 +72,9 @@
                     <p class="price">{{product.price}} грн</p>
                     <div>
                         <a href="/products/{{product.id}}">Переглянути</a>
+                        {% if request.user.is_authenticated %}
                         <a href="/addproduct/{{product.id}}" class="addproduct"><img src="{% static 'products/images/logos.png' %}" alt="" class="logos"></a>
+                        {% endif %}
                     </div>
                   </div>
                 {% endfor %}
@@ -86,7 +92,9 @@
                   <p class="price">{{product.price}} грн</p>
                   <div>
                       <a href="/products/{{product.id}}">Переглянути</a>
-                      <img src="{% static 'products/images/logos.png' %}" alt="" class="logos">
+                      {% if request.user.is_authenticated %}
+                      <a href="/addproduct/{{product.id}}" class="addproduct"><img src="{% static 'products/images/logos.png' %}" alt="" class="logos"></a>
+                      {% endif %}
                   </div>
                 </div>
               {% endfor %}
