--- a/projectmagaz/products/templates/products/product.html
+++ b/projectmagaz/products/templates/products/product.html
@@ -22,5 +22,7 @@
         </div>
         
     </main>
+    {% if request.user.is_authenticated %}
     <a href="/addproduct/{{product.id}}" class="backet">Додати до кошику</a>
+    {% endif %}
 {% endblock content %}
